objects/SDO_Sales_GPT_Simulated_Reply__c.object
<CustomObject>
    <fields>
        <fullName>Einstein_GPT_Configuration__c</fullName>
        <label>Einstein GPT Configuration</label>
        <referenceTo>SDO_Einstein_GPT_Configuration__c</referenceTo>
        <relationshipName>SDO_Sales_GPT_Simulated_Replies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_View_Icon__c</fullName>
        <label>List View Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_View_Title__c</fullName>
        <label>List View Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <label>Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Return Single Record</fullName>
                </value>
                <value>
                    <fullName>Return Multiple Records</fullName>
                </value>
                <value>
                    <fullName>Summarize Record</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Sales GPT Simulated Reply</label>
    <nameField>
        <label>Simulated Reply Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales GPT Simulated Replies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>